@@ -1,4 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+ * ttrss-reader-fork for Android
+ * 
+ * Copyright (C) 2010 N. Braden.
+ * Copyright (C) 2009-2010 J. Devauchelle.
+ * 
+ * This program is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU General Public License
+ * version 3 as published by the Free Software Foundation.
+ * 
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+ * GNU General Public License for more details.
+-->
 <resources>
 
     <string name="ApplicationName">Tiny Tiny RSS Reader</string>
@@ -34,6 +49,7 @@
     <string name="ArticleActivity.ShareSubject">Link from TTRSS-Reader</string>
     <string name="ArticleActivity.ShareTitle">Send link...</string>
     <string name="ArticleActivity.MediaPlay">Play attached Media-File</string>
+    <string name="ArticleActivity.MediaDisplayLink">Open attachment</string>
     <string name="ArticleActivity.SwipeNotification">For Next / Previous Article Swipe here</string>
     
     <string name="Commons.PleaseWait">Please wait...</string>
