@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-    Copyright (C) 2009-2010 Felix Bechstein
+    Copyright (C) 2010 N. Braden.
 
     This file is part of ttrss-reader-fork. This program is free software; you
     can redistribute it and/or modify it under the terms of the GNU
@@ -17,8 +17,8 @@
 -->
 <resources>
     <string-array name="updates">
-        <item>v0.7.6: Added support for the star/unstar feature, Added support for the published-feature, New Application-Icon and Overlay-icons for star/publish </item>
-        <item>v0.7.5: Fixed sorting of categories, enhanced mediafile download and notification</item>
+        <item>v0.7.6: New Application-Icon and Overlay-icons for star/publish, Added support for the star/unstar feature, Added support for the published-feature, Fixed display of fresh/starred/published articles in the virtual feeds, Fixed handling of URLs in Article-View, Fixed problems with marking articles as read/unread</item>
+        <item>v0.7.5: Fixed sorting of categories, Enhanced mediafile download and added notification for finished downloads</item>
         <item>v0.7.4: Minor bugs fixed, Better fling-support for headline-list and articles, no recommendation when typing URL, Implemented new API-methods from http://tt-rss.org to avoid the manual hacking, added german localisation</item>
         <item>v0.7.3: Problems with API from 1.4.3.1 are (hopefully) resolved. Please mail me if i am wrong :)</item>
         <item>v0.7.2: Fixed wrong calculation of unread-counts, Added welcome-dialog for the first-run</item>
